--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Ophase - Eventanmeldung</title>
+  <title>O-Phase - Eventanmeldung</title>
   <base href="/ophase/events/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.8/dist/semantic.min.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/semantic.min.css">
 </head>
 <body>
   <app-root></app-root>
